--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
+  height: 100vh;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.todo {
+  display: "flex";
+  align-items: "center";
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  margin: 0.25rem;
+  border: 1px solid #ffffff;
+}
+
+.btn:hover {
+  border: 1px solid #000000;
+  background-color: #ffffff;
+}
+
+.btn-submit {
+  height: 1.75rem;
+}
+
+.btn-delete {
+  font-weight: 700;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  background-color: rgb(158, 24, 24);
+}
+
+.input {
+  cursor: pointer;
+  height: 18px;
+  width: 18px;
+  border-radius: 10%;
+  background-color: #eee;
 }
